# fasih

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: sample_report.md
examples/: broken_agent_example.py
fasih/: __init__.py  cli.py  config.py  findings.py  fixes.py  report.py  rules_engine.py  web.py
fasih/analyzers/: __init__.py  base.py  eval_structure.py  fail_open.py  orphaned_tools.py  secrets.py
fasih/arabic/: __init__.py  bidi.py  bidi_check.py  encoding_check.py  io_check.py  normalize.py  normalize_check.py  numeral_check.py
tests/: test_analyzers.py
